    &#8226; Major speed improvements when viewing tweets, profiles, searches, lists, and other networked tasks<br/>
    &#8226; Automatically load more search results, profile tweets, followers, and more at the bottom of the pages<br/>
    &#8226; View replies to retweets<br/>
    &#8226; Fade in animation for pictures<br/>
    &#8226; Fix for sharing from gallery<br/>
    &#8226; Many more crash fixes<br/>
</br><br/>

<b>Version 1.4.0:</b><br/><br/>
    &#8226; Customize the two pages on the left of the main timeline<br/>
    &#8226; Long click to remove favorite users<br/>
    &#8226; Progress bar for in-app browser<br/>
    &#8226; Better calculation of tweet lengths<br/>
    &#8226; MUCH refresh times again<br/>
    &#8226; More stability fixes<br/>
    &#8226; Better memory management again<br/>
    &#8226; Download the Portal app for themes and news from "Theme Settings"<br/>
</br><br/>

<b>Version 1.3.4:</b><br/><br/>
    &#8226; New method for faster refresh times<br/>
    &#8226; Small bug fixes<br/>
</br>

<b>Version 1.3.3:</b><br/><br/>
    &#8226; Few fixes for attaching images to tweets<br/>
</br>

<b>Version 1.3.2:</b><br/><br/>
    &#8226; A little bit higher quality YouTube thumbnails<br/>
    &#8226; Better stability<br/>
</br>

<b>Version 1.3.0:</b><br/><br/>
    &#8226; TweetMarker support<br/>
    &#8226; TwitLonger support<br/>
    &#8226; Upload with TwitPic<br/>
    &#8226; Much better handling of user searches<br/>
    &#8226; Added share and quote button to the in-line expansions on tweets<br/>
    &#8226; Add color to the retweet and favorite buttons so you can better distinguish your actions on a tweet<br/>
    &#8226; Live streamed tweets will be automatically loaded when you are at the top of the timeline<br/>
    &#8226; Higher quality Instagram, TwitPic, and Imgur pictures<br/>
    &#8226; Remove retweets by long pressing the retweet button<br/>
    &#8226; Pull to refresh on searched trends<br/>